--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -10,15 +10,16 @@ services:
       - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
       - SPRING_DATA_MONGODB_URI=mongodb://plantycompareuaaserver-mongodb:27017
       - SPRING_DATA_MONGODB_DATABASE=PlantyCompareUaaServer
-      - JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
+      #- JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
+      - JHIPSTER_SLEEP=5
   plantycompareuaaserver-mongodb:
     extends:
       file: mongodb.yml
       service: plantycompareuaaserver-mongodb
-  jhipster-registry:
-    extends:
-      file: jhipster-registry.yml
-      service: jhipster-registry
-    environment:
-      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_TYPE=native
-      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS=file:./central-config/docker-config/
+#  jhipster-registry:
+#    extends:
+#      file: jhipster-registry.yml
+#      service: jhipster-registry
+#    environment:
+#      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_TYPE=native
+#      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS=file:./central-config/docker-config/
