sizing of containers

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -3,8 +3,12 @@ services:
   plantycompareuaaserver-app:
     image: plantycompareuaaserver
     environment:
-      - _JAVA_OPTIONS=-Xmx512m -Xms256m
+      # Set by Hadi
+      # - _JAVA_OPTIONS=-Xmx512m -Xms256m
+      - _JAVA_OPTIONS=-Xmx256m -Xms128m      
+      ## Changed by Hadi
       - SPRING_PROFILES_ACTIVE=prod,swagger
+      #- SPRING_PROFILES_ACTIVE=dev,swagger
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
       - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
@@ -12,10 +16,14 @@ services:
       - SPRING_DATA_MONGODB_DATABASE=PlantyCompareUaaServer
       #- JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
       - JHIPSTER_SLEEP=5
+    # Added by Hadi
+    mem_limit: 288m
   plantycompareuaaserver-mongodb:
     extends:
       file: mongodb.yml
       service: plantycompareuaaserver-mongodb
+    # Added by Hadi
+    mem_limit: 64m
 #  jhipster-registry:
 #    extends:
 #      file: jhipster-registry.yml
@@ -23,3 +31,6 @@ services:
 #    environment:
 #      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_TYPE=native
 #      - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS=file:./central-config/docker-config/
+#    # Added by Hadi
+#    mem_limit: 512m
+
